# SofaHapticAvatar

./: CMakeLists.txt  README.md  Readme.txt  SofaHapticAvatarConfig.cmake.in
.github/workflows/: ci.yml
examples/: ArticulatedGrasper - 2 tools.xml  ArticulatedGrasper.scn  ArticulatedGrasper.xml  ArticulatedGrasper2.xml  ArticulatedRigidGrasper.xml  ArticulatedSystemGrasping.scn  ArticulatedSystemMapping.scn  Cube-78-0.01.comp  HAvatar_ArticulatedDeviceEmulator.scn  HAvatar_ArticulatedDeviceEmulator2.scn  HAvatar_ArticulatedGrasper_Bench-01-motion.scn  HAvatar_ArticulatedGrasper_Bench-02_RigidFloor.scn  HAvatar_ArticulatedGrasper_Bench-03_RigidCube.scn  HAvatar_ArticulatedGrasper_Bench-04_DeformableCube.scn  HAvatar_ArticulatedGrasper_Bench-05_Liver.scn  HAvatar_ArticulatedGrasper_Bench-05_RigidCactus.scn  HAvatar_ArticulatedGrasper_Bench-06_DeformableCactus.scn  HAvatar_ArticulatedGrasper_Bench-06_Liver_spheres.scn  HAvatar_ArticulatedGrasper_Bench-07_Liver.scn  HAvatar_ArticulatedSystemGrasping.scn  HAvatar_Dual_ArticulatedGrasper_Bench-01-motion.scn  HAvatar_Dual_ArticulatedGrasper_Bench-02_RigidFloor.scn  HAvatar_Dual_ArticulatedGrasper_Bench-03_RigidCube.scn  HAvatar_Dual_ArticulatedGrasper_Bench-04_DeformableCube.scn  HAvatar_Dual_ArticulatedGrasper_Bench-04_DeformableCube.scn.qglviewer.view  HAvatar_Dual_ArticulatedGrasper_Bench-05_DeformableTorus.scn  HAvatar_Emulator.scn  HAvatar_Grasper_01_Device.py  HAvatar_Grasper_02_RigidFloor.py  HAvatar_Grasper_03_RigidCube.py  HAvatar_Grasper_04_DeformableCube.py  HAvatar_Grasper_05_RigidCactus.py  HAvatar_Grasper_06_DeformableCactus.py  HAvatar_Grasper_07_Liver.py  HAvatar_Grasper_Bench-01_motion.scn  HAvatar_Liver.scn  HAvatar_Liver.scn.qglviewer.view  HAvatar_Liver_light.scn  HAvatar_Liver_light.scn.qglviewer.view  HAvatar_RigidCube.scn  (+47 more)
examples/config/: PortalSetup.xml
examples/mesh/: Haptic device lowres.mtl  grasper_jaws_down_collision.mtl  grasper_jaws_up_collision.mtl  grasper_jaws_up_collision_centered.mtl  grasper_shaft.mtl  grasper_shaft_collision.mtl  torus_low_res.msh
src/SofaHapticAvatar/: HapticAvatarAPI.cpp  HapticAvatarAPI.h  HapticAvatarDefines.h  HapticAvatarDeviceController.cpp  HapticAvatarDeviceController.h  HapticAvatarDriver.cpp  HapticAvatarDriver.h  HapticAvatarEmulator.cpp  HapticAvatarEmulator.h  HapticAvatarIBoxController.cpp  HapticAvatarIBoxController.h  HapticAvatarPortalController.cpp  HapticAvatarPortalController.h  HapticAvatarPortalManager.cpp  HapticAvatarPortalManager.h  HapticAvatar_ArticulatedDeviceController.cpp  HapticAvatar_ArticulatedDeviceController.h  HapticAvatar_ArticulatedDeviceEmulator.cpp  HapticAvatar_ArticulatedDeviceEmulator.h  HapticAvatar_BaseDeviceController.cpp  HapticAvatar_BaseDeviceController.h  HapticAvatar_Defines.h  HapticAvatar_DeviceController.cpp  HapticAvatar_DeviceController.h  HapticAvatar_DeviceEmulator.cpp  HapticAvatar_DeviceEmulator.h  HapticAvatar_DirectGrasperDeviceController.cpp  HapticAvatar_DirectGrasperDeviceController.h  HapticAvatar_Driver.cpp  HapticAvatar_Driver.h  HapticAvatar_DriverBase.cpp  HapticAvatar_DriverBase.h  HapticAvatar_DriverIbox.cpp  HapticAvatar_DriverIbox.h  HapticAvatar_DriverPort.cpp  HapticAvatar_DriverPort.h  HapticAvatar_DriverScope.cpp  HapticAvatar_DriverScope.h  HapticAvatar_GrasperDeviceController.cpp  HapticAvatar_GrasperDeviceController.h  (+20 more)
